Fix Swagger @router
